fix: removed MaxPermSize default java options removed